# oculusprime_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  dwa_nav.rviz  dwa_testing.rviz  gmapping.rviz  map_rv  nav_test.rviz  odom_map_test.rviz  odom_test.rviz  package.xml  rv  testing.rviz
config/: 2d_testing.lua  Follower.cfg  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
description/: astra.urdf.xacro  oculus_prime_urdf.stl  oculusprime.urdf  oculusprime.urdf.xacro  oculusprime_simple.urdf
launch/: amcl.launch  blankmap.launch  camera.launch  cartographer.launch  depthcam_to_java.launch  dwa_nav.launch  dwa_testing.launch  fake_laser.launch  follower.launch  follower_gazebo.launch  gazebo_gmapping.launch  gazebo_nav.launch  globalpath_follow.launch  globalpath_follow_lidar.launch  gmapping.launch  make_map.launch  make_map_lidar.launch  map_server.launch  move_base.launch  move_base_blank_map.launch  move_base_dwa.launch  neato_globalpath_follow.launch  neato_lidar.launch  neato_mapping.launch  neato_remote_nav.launch  oculus_ds3.launch  oculusprime_gazebo.launch  odom_test_orbbec.launch  openni2.launch  openni2_320.launch  openni_driver.launch  orbbec_remote_nav.launch  prime_amcl.launch  remote_nav.launch  remote_nav_lidar.launch  test.launch  testing.launch  webrtc.launch  xaxxon_lidar.launch  xaxxon_lidar_globalpath_follow.launch  (+3 more)
maps/: my_map.pgm  my_map.pgm.1  my_map.yaml
params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  neato_costmap_common_params.yaml  (+4 more)
plugins/: nodelets.xml
(+38 files in other folders)
