<?xml version="1.0"?>
<package>
  <name>oculusprime</name>
  <version>0.1.1</version>
  <description>Oculus Prime</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="info@xaxxon.com">Xaxxon Technologies</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>gmapping</run_depend>
  
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>

</package>
